examples/test/testpolicy16940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16940
  namespace: namespace179
spec:
  podSelector:
    matchLabels:
      key3: value10
      key15: value42
      key35: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value4
          key41: value47
      podSelector:
        matchLabels:
          key21: value16
